a few cosmetic changes

--- a/Benchmarks.ipynb
+++ b/Benchmarks.ipynb
@@ -11,7 +11,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get a rough idea of what is a good MAE for this problem we train a random forest classifier. We can use this model as a reference. In addition we also train a simple logistic regression as a performance reference for our attempts."
+    "The purpose of this notebook is to get a rough idea of what are reasonable performance goals for the mean absolute error (MAE). Our approach is to train a couple models and use thier MAEs as a reference.\n",
+    "- Random forest classifier\n",
+    "- Logistic regression\n",
+    "- Guessing at random"
    ]
   },
   {
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -298,8 +301,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE = 0.433846153846\n",
-      "Acc. = 0.623076923077\n"
+      "MAE = 0.35\n",
+      "Acc. = 0.687692307692\n"
      ]
     }
    ],
@@ -318,13 +321,12 @@
     {
      "data": {
       "text/plain": [
-       "array([[  0,   0,   1,   0,   0,   0,   0],\n",
-       "       [  0,   7,  15,  17,   0,   0,   0],\n",
-       "       [  0,   1, 307, 118,   1,   0,   0],\n",
-       "       [  0,   0,  75, 473,  19,   0,   0],\n",
-       "       [  0,   0,   3, 107, 115,   1,   0],\n",
-       "       [  0,   0,   0,  13,   9,  17,   0],\n",
-       "       [  0,   0,   0,   0,   1,   0,   0]])"
+       "array([[  0,   0,   5,   5,   0,   0],\n",
+       "       [  0,   5,  31,  13,   1,   0],\n",
+       "       [  0,   0, 307, 105,   4,   0],\n",
+       "       [  0,   0,  81, 454,  25,   0],\n",
+       "       [  0,   0,   5, 105, 118,   2],\n",
+       "       [  0,   0,   1,   8,  15,  10]])"
       ]
      },
      "execution_count": 12,
@@ -346,13 +348,12 @@
     {
      "data": {
       "text/plain": [
-       "6    567\n",
-       "5    427\n",
-       "7    226\n",
-       "8     39\n",
-       "4     39\n",
-       "9      1\n",
-       "3      1\n",
+       "6    560\n",
+       "5    416\n",
+       "7    230\n",
+       "4     50\n",
+       "8     34\n",
+       "3     10\n",
        "Name: quality, dtype: int64"
       ]
      },
@@ -375,11 +376,11 @@
     {
      "data": {
       "text/plain": [
-       "6    728\n",
-       "5    401\n",
-       "7    145\n",
-       "8     18\n",
-       "4      8\n",
+       "6    690\n",
+       "5    430\n",
+       "7    163\n",
+       "8     12\n",
+       "4      5\n",
        "dtype: int64"
       ]
      },
@@ -402,13 +403,13 @@
     {
      "data": {
       "text/plain": [
-       "6    2269\n",
-       "5    1711\n",
-       "7     853\n",
-       "4     177\n",
-       "8     154\n",
-       "3      29\n",
-       "9       4\n",
+       "6    2276\n",
+       "5    1722\n",
+       "7     849\n",
+       "4     166\n",
+       "8     159\n",
+       "3      20\n",
+       "9       5\n",
        "Name: quality, dtype: int64"
       ]
      },
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -441,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -463,52 +464,52 @@
      "output_type": "stream",
      "text": [
       "Results for penalty = l1 and C = 0.001\n",
-      "MAE = 0.913076923077\n",
-      "Acc. = 0.321538461538\n",
+      "MAE = 0.916923076923\n",
+      "Acc. = 0.32\n",
       "\n",
       "Results for penalty = l1 and C = 0.01\n",
-      "MAE = 0.526923076923\n",
-      "Acc. = 0.534615384615\n",
+      "MAE = 0.524615384615\n",
+      "Acc. = 0.542307692308\n",
       "\n",
       "Results for penalty = l1 and C = 0.1\n",
-      "MAE = 0.516923076923\n",
-      "Acc. = 0.541538461538\n",
+      "MAE = 0.510769230769\n",
+      "Acc. = 0.547692307692\n",
       "\n",
       "Results for penalty = l1 and C = 1.0\n",
-      "MAE = 0.519230769231\n",
-      "Acc. = 0.54\n",
+      "MAE = 0.511538461538\n",
+      "Acc. = 0.546923076923\n",
       "\n",
       "Results for penalty = l1 and C = 10.0\n",
-      "MAE = 0.520769230769\n",
-      "Acc. = 0.538461538462\n",
+      "MAE = 0.512307692308\n",
+      "Acc. = 0.546153846154\n",
       "\n",
       "Results for penalty = l1 and C = 100.0\n",
-      "MAE = 0.520769230769\n",
-      "Acc. = 0.538461538462\n",
+      "MAE = 0.512307692308\n",
+      "Acc. = 0.546153846154\n",
       "\n",
       "Results for penalty = l2 and C = 0.001\n",
-      "MAE = 0.542307692308\n",
-      "Acc. = 0.524615384615\n",
+      "MAE = 0.525384615385\n",
+      "Acc. = 0.544615384615\n",
       "\n",
       "Results for penalty = l2 and C = 0.01\n",
-      "MAE = 0.529230769231\n",
-      "Acc. = 0.530769230769\n",
+      "MAE = 0.516153846154\n",
+      "Acc. = 0.544615384615\n",
       "\n",
       "Results for penalty = l2 and C = 0.1\n",
-      "MAE = 0.516923076923\n",
-      "Acc. = 0.540769230769\n",
+      "MAE = 0.509230769231\n",
+      "Acc. = 0.547692307692\n",
       "\n",
       "Results for penalty = l2 and C = 1.0\n",
-      "MAE = 0.520769230769\n",
-      "Acc. = 0.538461538462\n",
+      "MAE = 0.510769230769\n",
+      "Acc. = 0.546153846154\n",
       "\n",
       "Results for penalty = l2 and C = 10.0\n",
-      "MAE = 0.520769230769\n",
-      "Acc. = 0.538461538462\n",
+      "MAE = 0.512307692308\n",
+      "Acc. = 0.546153846154\n",
       "\n",
       "Results for penalty = l2 and C = 100.0\n",
-      "MAE = 0.520769230769\n",
-      "Acc. = 0.538461538462\n",
+      "MAE = 0.512307692308\n",
+      "Acc. = 0.546153846154\n",
       "\n"
      ]
     }
@@ -534,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -543,7 +544,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lowest MAE (0.5169230769230769) with penalty = l1 and C = 0.1\n"
+      "Lowest MAE (0.5092307692307693) with penalty = l2 and C = 0.1\n"
      ]
     }
    ],
@@ -555,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -566,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -574,15 +575,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[  0,   0,   5,   2,   0,   0],\n",
-       "       [  0,   0,  27,  12,   2,   0],\n",
-       "       [  0,   0, 279, 139,   0,   0],\n",
-       "       [  0,   0, 158, 406,  15,   0],\n",
-       "       [  0,   0,   9, 184,  19,   0],\n",
-       "       [  0,   0,   3,  36,   4,   0]])"
+       "array([[  0,   0,   6,   4,   0,   0],\n",
+       "       [  0,   0,  32,  17,   1,   0],\n",
+       "       [  0,   0, 276, 139,   1,   0],\n",
+       "       [  0,   0, 128, 426,   6,   0],\n",
+       "       [  0,   0,  10, 210,  10,   0],\n",
+       "       [  0,   0,   1,  28,   5,   0]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -601,16 +602,16 @@
     {
      "data": {
       "text/plain": [
-       "6    579\n",
-       "5    418\n",
-       "7    212\n",
-       "8     43\n",
-       "4     41\n",
-       "3      7\n",
+       "6    560\n",
+       "5    416\n",
+       "7    230\n",
+       "4     50\n",
+       "8     34\n",
+       "3     10\n",
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -629,13 +630,13 @@
     {
      "data": {
       "text/plain": [
-       "6    779\n",
-       "5    481\n",
-       "7     40\n",
+       "6    824\n",
+       "5    453\n",
+       "7     23\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -654,52 +655,23 @@
     {
      "data": {
       "text/plain": [
-       "6    2257\n",
-       "5    1720\n",
-       "7     867\n",
-       "4     175\n",
-       "8     150\n",
-       "3      23\n",
+       "6    2276\n",
+       "5    1722\n",
+       "7     849\n",
+       "4     166\n",
+       "8     159\n",
+       "3      20\n",
        "9       5\n",
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y_train.value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6    2836\n",
-       "5    2138\n",
-       "7    1079\n",
-       "4     216\n",
-       "8     193\n",
-       "3      30\n",
-       "9       5\n",
-       "Name: quality, dtype: int64"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.quality.value_counts()"
    ]
   },
   {
@@ -711,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -719,12 +691,13 @@
    "source": [
     "y_pred = []\n",
     "for _ in range(len(y_test)):\n",
+    "    # We randomly guess a wine score in [5, 7]\n",
     "    y_pred.append(np.random.randint(5,8))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -733,8 +706,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE = 0.94\n",
-      "Acc. = 0.293846153846\n"
+      "MAE = 0.931538461538\n",
+      "Acc. = 0.316923076923\n"
      ]
     }
    ],
