--- a/Ensemble.ipynb
+++ b/Ensemble.ipynb
@@ -47,7 +47,8 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -193,6 +194,172 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"# Generate interaction features\\nfrom itertools import combinations\\nfor feature1, feature2 in combinations(data.columns[:-2], 2):\\n    temp = data[feature1] * data[feature2]\\n    data.insert(data.shape[1]-1, feature1 + 'x' + feature2, temp)\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"# Generate interaction features\n",
+    "from itertools import combinations\n",
+    "for feature1, feature2 in combinations(data.columns[:-2], 2):\n",
+    "    temp = data[feature1] * data[feature2]\n",
+    "    data.insert(data.shape[1]-1, feature1 + 'x' + feature2, temp)\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed_acidity</th>\n",
+       "      <th>volatile_acidity</th>\n",
+       "      <th>citric</th>\n",
+       "      <th>sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free_SD</th>\n",
+       "      <th>total_SD</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>type_red</th>\n",
+       "      <th>quality</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>0.270</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>0.038</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>155.0</td>\n",
+       "      <td>0.99500</td>\n",
+       "      <td>3.28</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.310</td>\n",
+       "      <td>0.26</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>0.069</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>0.99540</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.6</td>\n",
+       "      <td>0.380</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0.046</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>116.0</td>\n",
+       "      <td>0.99440</td>\n",
+       "      <td>3.15</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>9.4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.5</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>0.35</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.061</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.99524</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.725</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>0.99685</td>\n",
+       "      <td>3.35</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   fixed_acidity  volatile_acidity  citric  sugar  chlorides  free_SD  \\\n",
+       "0            6.3             0.270    0.25    5.8      0.038     52.0   \n",
+       "1            7.0             0.310    0.26    7.4      0.069     28.0   \n",
+       "2            7.6             0.380    0.20    3.4      0.046      9.0   \n",
+       "3            8.5             0.280    0.35    1.7      0.061      6.0   \n",
+       "4            8.0             0.725    0.24    2.8      0.083     10.0   \n",
+       "\n",
+       "   total_SD  density    pH  sulphates  alcohol  type_red  quality  \n",
+       "0     155.0  0.99500  3.28       0.38      9.4         0        6  \n",
+       "1     160.0  0.99540  3.13       0.46      9.8         0        6  \n",
+       "2     116.0  0.99440  3.15       0.41      9.4         0        5  \n",
+       "3      15.0  0.99524  3.30       0.74     11.8         1        7  \n",
+       "4      62.0  0.99685  3.35       0.56     10.0         1        6  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -202,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -215,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +393,7 @@
        "5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -264,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -274,24 +441,24 @@
      "output_type": "stream",
      "text": [
       "Training split number 1 ...\n",
-      "MAE = 0.536538461538\n",
-      "Acc. = 0.525\n",
-      "\n",
-      "Training split number 2 ...\n",
-      "MAE = 0.514423076923\n",
+      "MAE = 0.516346153846\n",
       "Acc. = 0.541346153846\n",
       "\n",
+      "Training split number 2 ...\n",
+      "MAE = 0.499038461538\n",
+      "Acc. = 0.55\n",
+      "\n",
       "Training split number 3 ...\n",
-      "MAE = 0.520692974013\n",
-      "Acc. = 0.531280076997\n",
+      "MAE = 0.521655437921\n",
+      "Acc. = 0.526467757459\n",
       "\n",
       "Training split number 4 ...\n",
-      "MAE = 0.517805582291\n",
-      "Acc. = 0.543792107796\n",
+      "MAE = 0.540904716073\n",
+      "Acc. = 0.518768046198\n",
       "\n",
       "Training split number 5 ...\n",
-      "MAE = 0.525505293551\n",
-      "Acc. = 0.533205004812\n",
+      "MAE = 0.528392685274\n",
+      "Acc. = 0.535129932628\n",
       "\n"
      ]
     }
@@ -314,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -341,8 +508,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE = 0.520769230769\n",
-      "Acc. = 0.549230769231\n"
+      "MAE = 0.515384615385\n",
+      "Acc. = 0.556923076923\n"
      ]
     }
    ],
@@ -355,18 +522,17 @@
     "y_pred2 = clf2.predict(X_test.ix[:,11:])\n",
     "y_pred = (y_pred1*y_pred2)**0.5\n",
     "y_pred = pd.Series(y_pred).apply(np.rint)\"\"\"\n",
-    "features = ['alcohol', 'volatile_acidity'] \n",
-    "features += ['clf_' + str(i) for i in range(n_splits)]\n",
+    "\n",
     "clf = LogisticRegression(penalty='l2', C=10, n_jobs=-1)\n",
-    "clf.fit(X_train[features], y_train)\n",
-    "y_pred = clf.predict(X_test[features])\n",
+    "clf.fit(X_train, y_train)\n",
+    "y_pred = clf.predict(X_test)\n",
     "print(\"MAE =\", mean_absolute_error(y_test, y_pred))\n",
     "print(\"Acc. =\", accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -377,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -386,8 +552,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE = 0.344615384615\n",
-      "Acc. = 0.696923076923\n"
+      "MAE = 0.315384615385\n",
+      "Acc. = 0.718461538462\n"
      ]
     }
    ],
@@ -405,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -414,27 +580,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alcohol            0.08744958921880071\n",
-      "density            0.08724093612277391\n",
-      "total_SD           0.08643291576783323\n",
-      "volatile_acidity   0.08563921113118342\n",
-      "free_SD            0.08410553756900786\n",
-      "pH                 0.08307755172540497\n",
-      "sugar              0.08239138973495075\n",
-      "chlorides          0.0804824382608191\n",
-      "sulphates          0.07941118985587754\n",
-      "citric             0.07500664628055985\n",
-      "fixed_acidity      0.07391349750398445\n",
-      "clf_1              0.029830024932010563\n",
-      "clf_3              0.024813631649719302\n",
-      "clf_0              0.02344648340981929\n",
-      "clf_2              0.008677472851043245\n",
-      "clf_4              0.004585317497194166\n",
-      "type_red           0.0034961664890176603\n"
+      "total_SD           0.08762531016060353\n",
+      "volatile_acidity   0.08727124199793165\n",
+      "density            0.08657137711605628\n",
+      "free_SD            0.0827766041545962\n",
+      "alcohol            0.08245006713048353\n",
+      "pH                 0.08129395170275522\n",
+      "sugar              0.08087782988306218\n",
+      "chlorides          0.08038777722892013\n",
+      "sulphates          0.08012419375977499\n",
+      "citric             0.07570632004307538\n",
+      "fixed_acidity      0.07363807168335836\n",
+      "clf_4              0.027318104762493318\n",
+      "clf_0              0.025942325372914188\n",
+      "clf_2              0.022521895587056803\n",
+      "clf_1              0.0156885047161283\n",
+      "clf_3              0.006226844997367866\n",
+      "type_red           0.0035795797034221455\n"
      ]
     }
    ],
    "source": [
+    "# Importance of features according to the random forest\n",
     "important = []\n",
     "for name, imp in zip(X_train.columns,clf.feature_importances_):\n",
     "    important.append((imp, name))\n",
@@ -444,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -453,12 +620,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE = 0.347692307692\n",
-      "Acc. = 0.696923076923\n"
+      "MAE = 0.312307692308\n",
+      "Acc. = 0.720769230769\n"
      ]
     }
    ],
    "source": [
+    "# Not using the extra classifiers obtained above\n",
     "clf = RandomForestClassifier(n_estimators=500,\n",
     "                             max_depth=25,\n",
     "                             min_samples_split=2,\n",
@@ -472,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -481,36 +649,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "alcohol            0.12456150169915467\n",
-      "volatile_acidity   0.10079086524084184\n",
-      "density            0.10037199210137956\n",
-      "total_SD           0.09056896930277966\n",
-      "free_SD            0.08735394626657877\n",
-      "chlorides          0.08717254140126988\n",
-      "sugar              0.08628963087932363\n",
-      "sulphates          0.08513512467085266\n",
-      "pH                 0.08451372034909267\n",
-      "citric             0.07726568780858502\n",
-      "fixed_acidity      0.07597602028014176\n"
+      "alcohol            0.12312657766655412\n",
+      "density            0.10178391066398866\n",
+      "volatile_acidity   0.10132803837042675\n",
+      "total_SD           0.09163105048496492\n",
+      "sulphates          0.0870027801896926\n",
+      "chlorides          0.08694839306612462\n",
+      "free_SD            0.08673989368983179\n",
+      "sugar              0.08440910236150106\n",
+      "pH                 0.0829214400103291\n",
+      "citric             0.07842848525846423\n",
+      "fixed_acidity      0.07568032823812217\n"
      ]
     }
    ],
    "source": [
+    "# Importance of features according to the random forest\n",
     "important = []\n",
     "for name, imp in zip(X_train.columns,clf.feature_importances_):\n",
     "    important.append((imp, name))\n",
     "for imp, name in sorted(important)[::-1]:\n",
     "    print(\"{:<18} {}\".format(name, imp))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
