--- a/Triangulation with ensemble.ipynb
+++ b/Triangulation with ensemble.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
        "4 -0.159545  0.558100  1.288240  -0.579025 -0.959946        5  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,6 +171,43 @@
     "#data = pd.read_csv('data/wine_data.csv')\n",
     "data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "temp = pd.DataFrame(data.corr()['quality']).apply(np.abs).sort_values(by='quality', ascending=False).iloc[1:]\n",
+    "suma = 0 \n",
+    "i = 1\n",
+    "while suma <.99:\n",
+    "    suma += temp.quality.iloc[i]\n",
+    "    i += 1\n",
+    "temp = temp.iloc[:i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
