--- a/Benchmarks.ipynb
+++ b/Benchmarks.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -188,7 +188,7 @@
        "4  0.899821  0.293176 -1.496978   3.845571 -1.053784         1        5  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -255,17 +255,8 @@
        "      <th>density</th>\n",
        "      <th>pH</th>\n",
        "      <th>sulphates</th>\n",
-       "      <th>...</th>\n",
-       "      <th>volatile_acidity**2</th>\n",
-       "      <th>citric**2</th>\n",
-       "      <th>sugar**2</th>\n",
-       "      <th>chlorides**2</th>\n",
-       "      <th>free_SD**2</th>\n",
-       "      <th>total_SD**2</th>\n",
-       "      <th>density**2</th>\n",
-       "      <th>pH**2</th>\n",
-       "      <th>sulphates**2</th>\n",
-       "      <th>alcohol**2</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>type_red</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -281,17 +272,8 @@
        "      <td>0.248294</td>\n",
        "      <td>1.137303</td>\n",
        "      <td>-0.261526</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.476701</td>\n",
-       "      <td>0.375834</td>\n",
-       "      <td>0.170025</td>\n",
-       "      <td>0.145477</td>\n",
-       "      <td>1.052125</td>\n",
-       "      <td>0.947189</td>\n",
-       "      <td>0.061650</td>\n",
-       "      <td>1.293457</td>\n",
-       "      <td>0.068396</td>\n",
-       "      <td>1.140562</td>\n",
+       "      <td>-1.067971</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -305,17 +287,8 @@
        "      <td>-0.660550</td>\n",
        "      <td>1.741648</td>\n",
        "      <td>1.367797</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.110146</td>\n",
-       "      <td>1.659893</td>\n",
-       "      <td>0.163694</td>\n",
-       "      <td>0.153344</td>\n",
-       "      <td>0.162371</td>\n",
-       "      <td>0.025454</td>\n",
-       "      <td>0.436327</td>\n",
-       "      <td>3.033336</td>\n",
-       "      <td>1.870869</td>\n",
-       "      <td>3.102365</td>\n",
+       "      <td>1.761353</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -329,17 +302,8 @@
        "      <td>-0.009153</td>\n",
        "      <td>0.541278</td>\n",
        "      <td>0.264209</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2.711808</td>\n",
-       "      <td>0.375834</td>\n",
-       "      <td>0.154154</td>\n",
-       "      <td>1.316835</td>\n",
-       "      <td>1.783373</td>\n",
-       "      <td>2.533147</td>\n",
-       "      <td>0.000084</td>\n",
-       "      <td>0.292982</td>\n",
-       "      <td>0.069807</td>\n",
-       "      <td>0.336878</td>\n",
+       "      <td>-0.580412</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -353,17 +317,8 @@
        "      <td>-0.664473</td>\n",
        "      <td>0.342604</td>\n",
        "      <td>-0.173903</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.302943</td>\n",
-       "      <td>0.079822</td>\n",
-       "      <td>0.749619</td>\n",
-       "      <td>0.188108</td>\n",
-       "      <td>0.334911</td>\n",
-       "      <td>0.186654</td>\n",
-       "      <td>0.441524</td>\n",
-       "      <td>0.117377</td>\n",
-       "      <td>0.030242</td>\n",
-       "      <td>0.008622</td>\n",
+       "      <td>-0.092853</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -377,21 +332,11 @@
        "      <td>0.293176</td>\n",
        "      <td>-1.496978</td>\n",
        "      <td>3.845571</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.340055</td>\n",
-       "      <td>4.408750</td>\n",
-       "      <td>0.806900</td>\n",
-       "      <td>31.251051</td>\n",
-       "      <td>0.239736</td>\n",
-       "      <td>0.809677</td>\n",
-       "      <td>0.085952</td>\n",
-       "      <td>2.240944</td>\n",
-       "      <td>14.788418</td>\n",
-       "      <td>1.110460</td>\n",
+       "      <td>-1.053784</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 78 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -402,31 +347,15 @@
        "3      -0.645329         -0.550403 -0.282528 -0.865805   0.433714 -0.578715   \n",
        "4      -0.298454         -0.583142  2.099702 -0.898276   5.590264  0.489629   \n",
        "\n",
-       "   total_SD   density        pH  sulphates     ...      volatile_acidity**2  \\\n",
-       "0 -0.973236  0.248294  1.137303  -0.261526     ...                 4.476701   \n",
-       "1 -0.159545 -0.660550  1.741648   1.367797     ...                 2.110146   \n",
-       "2  1.591586 -0.009153  0.541278   0.264209     ...                 2.711808   \n",
-       "3 -0.432035 -0.664473  0.342604  -0.173903     ...                 0.302943   \n",
-       "4  0.899821  0.293176 -1.496978   3.845571     ...                 0.340055   \n",
-       "\n",
-       "   citric**2  sugar**2  chlorides**2  free_SD**2  total_SD**2  density**2  \\\n",
-       "0   0.375834  0.170025      0.145477    1.052125     0.947189    0.061650   \n",
-       "1   1.659893  0.163694      0.153344    0.162371     0.025454    0.436327   \n",
-       "2   0.375834  0.154154      1.316835    1.783373     2.533147    0.000084   \n",
-       "3   0.079822  0.749619      0.188108    0.334911     0.186654    0.441524   \n",
-       "4   4.408750  0.806900     31.251051    0.239736     0.809677    0.085952   \n",
-       "\n",
-       "      pH**2  sulphates**2  alcohol**2  \n",
-       "0  1.293457      0.068396    1.140562  \n",
-       "1  3.033336      1.870869    3.102365  \n",
-       "2  0.292982      0.069807    0.336878  \n",
-       "3  0.117377      0.030242    0.008622  \n",
-       "4  2.240944     14.788418    1.110460  \n",
-       "\n",
-       "[5 rows x 78 columns]"
+       "   total_SD   density        pH  sulphates   alcohol  type_red  \n",
+       "0 -0.973236  0.248294  1.137303  -0.261526 -1.067971         0  \n",
+       "1 -0.159545 -0.660550  1.741648   1.367797  1.761353         1  \n",
+       "2  1.591586 -0.009153  0.541278   0.264209 -0.580412         0  \n",
+       "3 -0.432035 -0.664473  0.342604  -0.173903 -0.092853         0  \n",
+       "4  0.899821  0.293176 -1.496978   3.845571 -1.053784         1  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -455,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -466,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -481,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +426,7 @@
        "            verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -519,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -528,8 +457,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE = 0.366923076923\n",
-      "Acc. = 0.685384615385\n"
+      "MAE = 0.335384615385\n",
+      "Acc. = 0.698461538462\n"
      ]
     }
    ],
@@ -540,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -548,15 +477,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[  0,   0,   6,   5,   0,   0],\n",
-       "       [  0,   7,  30,  20,   0,   0],\n",
-       "       [  0,   2, 301, 126,   2,   0],\n",
-       "       [  0,   0,  72, 460,  29,   0],\n",
-       "       [  0,   0,   8,  79, 110,   0],\n",
-       "       [  0,   0,   1,  20,   9,  13]])"
+       "array([[  0,   0,   3,   2,   0,   0,   0],\n",
+       "       [  0,   7,  26,   9,   0,   0,   0],\n",
+       "       [  0,   1, 297, 101,   4,   0,   0],\n",
+       "       [  0,   1,  92, 465,  34,   1,   0],\n",
+       "       [  0,   0,   9,  86, 128,   0,   0],\n",
+       "       [  0,   0,   1,   8,  12,  11,   0],\n",
+       "       [  0,   0,   0,   1,   1,   0,   0]])"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -575,16 +505,17 @@
     {
      "data": {
       "text/plain": [
-       "6    561\n",
-       "5    431\n",
-       "7    197\n",
-       "4     57\n",
-       "8     43\n",
-       "3     11\n",
+       "6    593\n",
+       "5    403\n",
+       "7    223\n",
+       "4     42\n",
+       "8     32\n",
+       "3      5\n",
+       "9      2\n",
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -603,15 +534,15 @@
     {
      "data": {
       "text/plain": [
-       "6    710\n",
-       "5    418\n",
-       "7    150\n",
-       "8     13\n",
+       "6    672\n",
+       "5    428\n",
+       "7    179\n",
+       "8     12\n",
        "4      9\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -630,17 +561,17 @@
     {
      "data": {
       "text/plain": [
-       "6    2275\n",
-       "5    1707\n",
-       "7     882\n",
-       "4     159\n",
-       "8     150\n",
-       "3      19\n",
-       "9       5\n",
+       "6    2243\n",
+       "5    1735\n",
+       "7     856\n",
+       "4     174\n",
+       "8     161\n",
+       "3      25\n",
+       "9       3\n",
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -669,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -681,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -691,52 +622,52 @@
      "output_type": "stream",
      "text": [
       "Results for penalty = l1 and C = 0.001\n",
-      "MAE = 0.662307692308\n",
-      "Acc. = 0.431538461538\n",
+      "MAE = 0.919230769231\n",
+      "Acc. = 0.31\n",
       "\n",
       "Results for penalty = l1 and C = 0.01\n",
-      "MAE = 0.539230769231\n",
-      "Acc. = 0.530769230769\n",
+      "MAE = 0.516923076923\n",
+      "Acc. = 0.540769230769\n",
       "\n",
       "Results for penalty = l1 and C = 0.1\n",
-      "MAE = 0.510769230769\n",
-      "Acc. = 0.55\n",
+      "MAE = 0.494615384615\n",
+      "Acc. = 0.563076923077\n",
       "\n",
       "Results for penalty = l1 and C = 1.0\n",
-      "MAE = 0.514615384615\n",
-      "Acc. = 0.547692307692\n",
+      "MAE = 0.497692307692\n",
+      "Acc. = 0.558461538462\n",
       "\n",
       "Results for penalty = l1 and C = 10.0\n",
-      "MAE = 0.523846153846\n",
-      "Acc. = 0.543076923077\n",
+      "MAE = 0.501538461538\n",
+      "Acc. = 0.557692307692\n",
       "\n",
       "Results for penalty = l1 and C = 100.0\n",
-      "MAE = 0.521538461538\n",
-      "Acc. = 0.545384615385\n",
+      "MAE = 0.503076923077\n",
+      "Acc. = 0.556923076923\n",
       "\n",
       "Results for penalty = l2 and C = 0.001\n",
-      "MAE = 0.536923076923\n",
-      "Acc. = 0.536923076923\n",
-      "\n",
-      "Results for penalty = l2 and C = 0.01\n",
-      "MAE = 0.520769230769\n",
-      "Acc. = 0.545384615385\n",
-      "\n",
-      "Results for penalty = l2 and C = 0.1\n",
-      "MAE = 0.513076923077\n",
+      "MAE = 0.513846153846\n",
       "Acc. = 0.548461538462\n",
       "\n",
+      "Results for penalty = l2 and C = 0.01\n",
+      "MAE = 0.5\n",
+      "Acc. = 0.559230769231\n",
+      "\n",
+      "Results for penalty = l2 and C = 0.1\n",
+      "MAE = 0.499230769231\n",
+      "Acc. = 0.56\n",
+      "\n",
       "Results for penalty = l2 and C = 1.0\n",
-      "MAE = 0.519230769231\n",
-      "Acc. = 0.543846153846\n",
+      "MAE = 0.498461538462\n",
+      "Acc. = 0.558461538462\n",
       "\n",
       "Results for penalty = l2 and C = 10.0\n",
-      "MAE = 0.52\n",
-      "Acc. = 0.543846153846\n",
+      "MAE = 0.5\n",
+      "Acc. = 0.558461538462\n",
       "\n",
       "Results for penalty = l2 and C = 100.0\n",
-      "MAE = 0.525384615385\n",
-      "Acc. = 0.543846153846\n",
+      "MAE = 0.501538461538\n",
+      "Acc. = 0.557692307692\n",
       "\n"
      ]
     }
@@ -762,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -771,7 +702,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lowest MAE (0.5107692307692308) with penalty = l1 and C = 0.1\n"
+      "Lowest MAE (0.4946153846153846) with penalty = l1 and C = 0.1\n"
      ]
     }
    ],
@@ -783,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -794,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -802,15 +733,16 @@
     {
      "data": {
       "text/plain": [
-       "array([[  0,   1,   5,   5,   0,   0],\n",
-       "       [  0,   6,  32,  17,   2,   0],\n",
-       "       [  0,   2, 267, 156,   6,   0],\n",
-       "       [  0,   0, 134, 390,  37,   0],\n",
-       "       [  0,   0,  11, 134,  52,   0],\n",
-       "       [  0,   0,   1,  24,  18,   0]])"
+       "array([[  0,   0,   4,   1,   0,   0,   0],\n",
+       "       [  0,   0,  27,  14,   1,   0,   0],\n",
+       "       [  0,   0, 264, 139,   0,   0,   0],\n",
+       "       [  0,   1, 139, 434,  19,   0,   0],\n",
+       "       [  0,   0,  16, 173,  34,   0,   0],\n",
+       "       [  0,   0,   2,  28,   2,   0,   0],\n",
+       "       [  0,   0,   0,   2,   0,   0,   0]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -829,16 +761,17 @@
     {
      "data": {
       "text/plain": [
-       "6    561\n",
-       "5    431\n",
-       "7    197\n",
-       "4     57\n",
-       "8     43\n",
-       "3     11\n",
+       "6    593\n",
+       "5    403\n",
+       "7    223\n",
+       "4     42\n",
+       "8     32\n",
+       "3      5\n",
+       "9      2\n",
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -857,14 +790,14 @@
     {
      "data": {
       "text/plain": [
-       "6    726\n",
-       "5    450\n",
-       "7    115\n",
-       "4      9\n",
+       "6    791\n",
+       "5    452\n",
+       "7     56\n",
+       "4      1\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -883,17 +816,17 @@
     {
      "data": {
       "text/plain": [
-       "6    2275\n",
-       "5    1707\n",
-       "7     882\n",
-       "4     159\n",
-       "8     150\n",
-       "3      19\n",
-       "9       5\n",
+       "6    2243\n",
+       "5    1735\n",
+       "7     856\n",
+       "4     174\n",
+       "8     161\n",
+       "3      25\n",
+       "9       3\n",
        "Name: quality, dtype: int64"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -925,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -934,14 +867,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MAE = 0.954615384615\n",
-      "Acc. = 0.300769230769\n"
+      "MAE = 0.908461538462\n",
+      "Acc. = 0.319230769231\n"
      ]
     }
    ],
    "source": [
     "print(\"MAE =\", mean_absolute_error(y_test, y_pred))\n",
     "print(\"Acc. =\", accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Predicting mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE = 0.66100591716\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = [np.mean(y_test)]*len(y_test)\n",
+    "print(\"MAE =\", mean_absolute_error(y_test, y_pred))"
    ]
   }
  ],
